--- a/materialui/package.json
+++ b/materialui/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.13.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "unique-names-generator": "^4.6.0",
